10290
Duplicate of SI-8011, fixed in 2.11.0-M8.

Fixed in https://github.com/scala/scala/commit/cb37548ef85d471951867b9f8a97cb9b9820fc66

{noformat}
scalac-hash cb37548ef85d471951867b9f8a97cb9b9820fc66 sandbox/test.scala
(remotes/origin/2.10.2) ~/code/scala2 scalac-hash cb37548ef85d471951867b9f8a97cb9b9820fc66~1 sandbox/test.scala
sandbox/test.scala:11: error: overriding method applyOrElse in trait PartialFunction of type [A1 <: Test.Parser[I], B1 >: Test.Parser[I]](x: A1, default: A1 => B1)B1;
 method applyOrElse has incompatible type
    def withErrorValue(errorValue: => Parser[I]): Parser[I] = parser trans {
                                                                           ^
one error found
{noformat}
